--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 
 #python stuff
 __pycache__
+*.pyc
 
 # root stuff
 ####################
@@ -47,4 +48,6 @@ AutoDict*
 ehthumbs.db
 Icon?
 Thumbs.db
+
+
 
